--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_action_tree_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_action_tree_macros.html
@@ -4,6 +4,7 @@
 			<div class="block-container">
 				<h2 class="block-header">{{ phrase('warning_actions') }}</h2>
 				<div class="block-body">
+					<xf:css src="sv_warning_improvements_category_list.less" />
 					<xf:datalist>
 						<xf:if is="$globalActions">
 							<xf:datarow>
