Frontend changes mostly

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -5,19 +5,25 @@
 <xf:js addon="SV/WarningImprovements" src="sv/chosen/chosen.jquery.js" min="1" /><xf:comment>missing?</xf:comment>
 <xf:js addon="SV/WarningImprovements" src="sv/warningimprovements/warnings.js" min="1" />
 
-<div id="warningViewSelect" class="JsOnly" style="display: none;">
-	<xf:formrow label="{{ phrase('warning_type') }}">
-		<xf:select name="warning_definition_id" value="{$xf.visitor.style_id}" label="{{ phrase('style') }}" class="warningItems WarningSelector"
-				   data-no-results-text="{{ phrase('sv_no_results_match') }}"
-				   data-place-holder-text="{{ phrase('sv_choose_a_warning') }}">
-			<xf:option value=""></xf:option>
-			<xf:optgroup label="{$warningCategory.title}">
-				<xf:foreach loop="$warningCategory.warnings" value="$warning">
-					<xf:option class="warningDefinition" value="{$warning.warning_definition_id}">{$warning.title}</xf:option>
+<div id="warningViewRadio" style="display: none;">
+	<xf:selectrow name="warning_definition_id" value="0" label="{{ phrase('warning_type') }}" class="warningItems WarningSelector" data-no-results-text="{{ phrase('sv_no_results_match') }}" data-place-holder-text="{{ phrase('sv_choose_a_warning') }}">
+		<xf:option value=""></xf:option>
+
+		<xf:if is="{$globalWarnings}">
+			<xf:foreach loop="$globalWarnings" value="$warning">
+					<xf:option value="{$warning.warning_definition_id}" class="js-FormFiller">{$warning.title}</xf:option>
+				</xf:foreach>
+		</xf:if>
+
+		<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
+			<xf:set var="$category" value="{$treeEntry.record}" />
+			<xf:optgroup label="{$category.title}">
+				<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warning">
+					<xf:option value="{$warning.warning_definition_id}" class="js-FormFiller">{{ repeat('--', $treeEntry.depth) }} {$warning.title}</xf:option>
 				</xf:foreach>
 			</xf:optgroup>
-		</xf:select>
-	</xf:formrow>
+		</xf:foreach>
+	</xf:selectrow>
 	
 	<xf:textboxrow name="title" label="{{ phrase('custom_warning') }}" />
 </div>
@@ -31,28 +37,26 @@
 				</xf:foreach>
 			</xf:radio>
 		</xf:if>
-		
+
 		<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
 			<xf:set var="$category" value="{$treeEntry.record}" />
 			<div class="u-depth{$treeEntry.depth}">
 				<div class="dataList-mainRow">{$category.title}</div>
 			</div>
 
-			<xf:if is="{$warnings.{$category.warning_category_id}} is not empty">
-				<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
-					<div class="u-depth{$treeEntry.depth}">
-						<xf:radio name="warning_definition_id" value="0">
-							<xf:option value="{$warningDefinition.warning_definition_id}" class="js-FormFiller" label="{$warningDefinition.title}">
-								<xf:dependent>
-									<xf:if is="{$warningDefinition.sv_custom_title}">
-										<xf:textbox name="custom_titlez" maxlength="{{ max_length($warningDefinition, 'title') }}" value="{$warningDefinition.title}" />
-									</xf:if>
-								</xf:dependent>
-							</xf:option>
-						</xf:radio>
-					</div>
-				</xf:foreach>
-			</xf:if>
+			<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
+				<div class="u-depth{$treeEntry.depth}">
+					<xf:radio name="warning_definition_id" value="0">
+						<xf:option value="{$warningDefinition.warning_definition_id}" class="js-FormFiller" label="{$warningDefinition.title}">
+							<xf:dependent>
+								<xf:if is="{$warningDefinition.sv_custom_title}">
+									<xf:textbox name="custom_titlez" maxlength="{{ max_length($warningDefinition, 'title') }}" value="{$warningDefinition.title}" />
+								</xf:if>
+							</xf:dependent>
+						</xf:option>
+					</xf:radio>
+				</div>
+			</xf:foreach>
 		</xf:foreach>
 	</xf:formrow>
 </div>
