--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -5,7 +5,7 @@
 <xf:js addon="SV/WarningImprovements" src="sv/chosen/chosen.jquery.js" min="1" /><xf:comment>missing?</xf:comment>
 <xf:js addon="SV/WarningImprovements" src="sv/warningimprovements/warnings.js" min="1" />
 
-<div id="warningViewRadio" style="display: none;">
+<div id="warning-view-select" style="display: none;">
 	<xf:selectrow name="warning_definition_id" value="0" label="{{ phrase('warning_type') }}" class="warningItems WarningSelector" data-no-results-text="{{ phrase('sv_no_results_match') }}" data-place-holder-text="{{ phrase('sv_choose_a_warning') }}">
 		<xf:option value=""></xf:option>
 
@@ -28,7 +28,7 @@
 	<xf:textboxrow name="title" label="{{ phrase('custom_warning') }}" />
 </div>
 
-<div id="warningViewRadio">
+<div id="warning-view-radio">
 	<xf:formrow label="{{ phrase('warning_type') }}">
 		<xf:if is="{$globalWarnings}">
 			<xf:radio name="warning_definition_id" value="0" label="{{ phrase('warning_type') }}">
@@ -61,8 +61,10 @@
 	</xf:formrow>
 </div>
 
-<a id="warningViewToggle" class="WarningViewToggler JsOnly" href="#"
-	data-selectview="#warningViewSelect"
-	data-radioview="#warningViewRadio"
-	data-toggleselecttext="{{ phrase('sv_toggle_select_view') }}"
-	data-toggleradiotext="{{ phrase('sv_toggle_radio_view') }}"></a>
+<xf:formrow>
+	<a class="u-jsOnly" data-xf-init="warning-view-toggle" href="#"
+	data-select-view="#warning-view-select"
+	data-radio-view="#warning-view-radio"
+	data-toggle-select-phrase="{{ phrase('sv_toggle_select_view') }}"
+	data-toggle-radio-phrase="{{ phrase('sv_toggle_radio_view') }}"></a>
+</xf:formrow>
