--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_list.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_list.html
@@ -1,1 +1,1 @@
-<xf:macro template="sv_warning_improvements_category_tree_macros" name="category_list" arg-globalWarnings="{$globalWarnings}" arg-warnings="{$warnings}" arg-categoryTree="{$categoryTree}" />
+<xf:macro template="sv_warning_improvements_category_tree_macros" name="category_list" arg-warnings="{$warnings}" arg-categoryTree="{$categoryTree}" />
