--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -1,13 +1,10 @@
-<link rel="stylesheet" href="styles/chosen/chosen.min.css" />
-
 <xf:css src="sv_member_warn_chooser.less" />
 
-<xf:js addon="SV/WarningImprovements" src="sv/chosen/chosen.jquery.js" min="1" /><xf:comment>missing?</xf:comment>
 <xf:js addon="SV/WarningImprovements" src="sv/warningimprovements/warnings.js" min="1" />
+<xf:js prod="vendor/select2/select2.full.js" dev="vendor/select2/select2.full.min.js" />
 
 <div id="warning-view-select" style="display: none;">
-	<xf:selectrow name="warning_definition_id" value="0" label="{{ phrase('warning_type') }}" class="warningItems WarningSelector" data-no-results-text="{{ phrase('sv_no_results_match') }}" data-place-holder-text="{{ phrase('sv_choose_a_warning') }}">
-		<xf:option value=""></xf:option>
+	<xf:selectrow name="warning_definition_id" value="0" label="{{ phrase('warning_type') }}" data-no-results-text="{{ phrase('sv_no_results_match') }}" data-place-holder-text="{{ phrase('sv_choose_a_warning') }}" data-xf-init="warning-view-select">
 		<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
 			<xf:set var="$category" value="{$treeEntry.record}" />
 			<xf:optgroup label="{$category.title}">
