Copy Warning title/text automatically to the public warning

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -15,7 +15,7 @@
 		</xf:foreach>
 	</xf:selectrow>
 	
-	<xf:textboxrow name="title" label="{{ phrase('custom_warning') }}" />
+	<xf:textboxrow name="custom_title" label="{{ phrase('custom_warning') }}" />
 </div>
 
 <div id="warning-view-radio">
