--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.less
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.less
@@ -10,6 +10,27 @@
 	background: mix(xf-default(@xf-input--background-color, @xf-contentBg), xf-default(@xf-inputDisabled--background-color, @xf-paletteNeutral1));
 }
 
+
+
+.inputChoices-dependencies
+{
+	.formRow
+	{
+		&--input
+		{
+			dt
+			{
+				display: none;
+			}
+			
+			dd
+			{
+				padding: 0px;
+			}
+		}
+	}
+}
+
 .select2-hidden-accessible
 {
 	border: 0 !important;
