--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_warning_tree_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_warning_tree_macros.html
@@ -25,14 +25,18 @@
 
 <xf:macro name="sortable_warning_list" arg-warnings="!" arg-category="!">
 	<div class="nestable-container" data-xf-init="nestable" data-parent-id="{$category.warning_category_id}" data-value-target="#js-category-{$category.warning_category_id}-Data">
+		<xf:if contentcheck="true">
 		<ol class="nestable-list">
+			<xf:contentcheck>
 			<xf:foreach loop="$warnings" value="$warning">
 				<li class="nestable-item" data-id="{$warning.warning_definition_id}">
 					<div class="nestable-handle" aria-label="{{ phrase('drag_handle') }}"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<div class="nestable-content">{$warning.MasterTitle.phrase_text}</div>
 				</li>
 			</xf:foreach>
+			</xf:contentcheck>
 		</ol>
+			</xf:if>
 		<xf:hiddenval name="category-{$category.warning_category_id}" value="" id="js-category-{$category.warning_category_id}-Data" />
 	</div>
 </xf:macro>
