Some more fixes

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
@@ -1,6 +1,6 @@
 <xf:set var="$issuer" value="{$alert.User}" />
 
-<xf:if is="!$content.canViewIssuer()">
+<xf:if is="!{$content.canViewIssuer()}">
 	<xf:set var="$issuer" value="{$content.getAnonymizedIssuer()}" />
 </xf:if>
 
